Updating the test pages to relative paths

--- a/test/png-suffix.html
+++ b/test/png-suffix.html
@@ -4,7 +4,7 @@
  <title>IE7 {CSS2: auto}</title>
 
  <!-- compliance patch for microsoft browsers -->
- <!--[if lt IE 8]><script src="../build.php?<?php echo(time()); ?>" type="text/javascript">
+ <!--[if lt IE 8]><script src="../trunk/lib/IE8.js" type="text/javascript">
   IE7_PNG_SUFFIX = ".png";
  </script><![endif]-->
 
