--- a/test/unfixed.html
+++ b/test/unfixed.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <!-- compliance patch for microsoft browsers -->
 <!--[if lt IE 8]>
-<script src="http://dean.edwards.test/IE7/build.php?<?php echo(time()); ?>" type="text/javascript"></script>
+<script src="http://dean.edwards.test/IE7/trunk/lib/IE8.js" type="text/javascript"></script>
 <![endif]-->
 </head>
   <style type="text/css">
