--- a/test/acid2.html
+++ b/test/acid2.html
@@ -4,7 +4,7 @@
   <title>The Second Acid Test</title>
 
  <!-- compliance patch for microsoft browsers -->
- <!--[if lt IE 8]><script src="../build.php?<?php echo(time()); ?>" type="text/javascript"></script><![endif]-->
+ <!--[if lt IE 8]><script src="../trunk/lib/IE8.js" type="text/javascript"></script><![endif]-->
 
   <style type="text/css">
    /* section numbers refer to CSS2.1 */
