--- a/test/box-model-off.html
+++ b/test/box-model-off.html
@@ -3,7 +3,7 @@
  <title>IE7 {CSS2: auto}</title>
 
  <!-- compliance patch for microsoft browsers -->
- <!--[if lt IE 8]><script src="../build.php?<?php echo(time()); ?>" type="text/javascript">
+ <!--[if lt IE 8]><script src="../trunk/lib/IE8.js" type="text/javascript">
   IE7_BOX_MODEL = false;
  </script><![endif]-->
 
