--- a/test/complexspiral/demo.html
+++ b/test/complexspiral/demo.html
@@ -4,7 +4,7 @@
 <head>
 <title>Complexspiral Demo</title>
 <!-- compliance patch for microsoft browsers -->
-<!--[if lt IE 8]><script src="../../build.php?<?php echo(time()); ?>" type="text/javascript"></script><![endif]-->
+<!--[if lt IE 8]><script src="../../trunk/lib/IE8.js" type="text/javascript"></script><![endif]-->
 <link rel="stylesheet" title="Shell (Default)" href="shell-bg.css" type="text/css" media="screen">
 <link rel="alternate stylesheet" title="Shuttle" href="shuttle-bg.css" type="text/css" media="screen">
 <link rel="alternate stylesheet" title="Big Ben" href="bigben-bg.css" type="text/css" media="screen">
