--- a/test/complexspiral/glassy.html
+++ b/test/complexspiral/glassy.html
@@ -4,7 +4,7 @@
 <head>
 <title>Complexspiral Redux</title>
 <!-- compliance patch for microsoft browsers -->
-<!--[if lt IE 8]><script src="../../build.php?<?php echo(time()); ?>" type="text/javascript"></script><![endif]-->
+<!--[if lt IE 8]><script src="../../trunk/lib/IE8.js" type="text/javascript"></script><![endif]-->
 <style type="text/css">
 <!--
 body {position: relative; margin: 0; padding: 0;}
