--- a/test/disabled.html
+++ b/test/disabled.html
@@ -5,7 +5,7 @@
 
  <!-- compliance patch for microsoft browsers -->
  <!--[if lt IE 8]>
- <script src="../build.php?<?php echo(time()); ?>" type="text/javascript"></script>
+ <script src="../trunk/lib/IE8.js" type="text/javascript"></script>
  <![endif]-->
 
  <style type="text/css">
