--- a/test/first-line.html
+++ b/test/first-line.html
@@ -4,7 +4,7 @@
 <html>
   <head>
   <!-- compliance patch for microsoft browsers -->
- <!--[if lt IE 8]><script src="../build.php?<?php echo(time()); ?>" type="text/javascript"></script><![endif]-->
+ <!--[if lt IE 8]><script src="../trunk/lib/IE8.js" type="text/javascript"></script><![endif]-->
 
     <style>
 p::first-letter:hover {
