--- a/test/form.html
+++ b/test/form.html
@@ -3,7 +3,7 @@
  <head>
   <title>IE7 {CSS2: auto}</title>
   <!-- compliance patch for microsoft browsers -->
-  <!--[if lt IE 8]><script src="../build.php?<?php echo(time()); ?>" type="text/javascript"></script><![endif]-->
+  <!--[if lt IE 8]><script src="../trunk/lib/IE8.js" type="text/javascript"></script><![endif]-->
  </head>
  <body>
   <script type="text/javascript" src="ie7-demo.js"></script>
