--- a/test/peekaboo.html
+++ b/test/peekaboo.html
@@ -6,7 +6,7 @@
 
  <!-- compliance patch for microsoft browsers -->
  <!--[if lt IE 8]>
-  <script src="../build.php?<?php echo(time()); ?>" type="text/javascript"></script>
+  <script src="../trunk/lib/IE8.js" type="text/javascript"></script>
   <script src="../ie7-squish.js" type="text/javascript"></script>
  <![endif]-->
 
