--- a/test/recalc.html
+++ b/test/recalc.html
@@ -3,7 +3,7 @@
  <title>IE7 {CSS2: auto}</title>
  <!-- compliance patch for microsoft browsers -->
  <!--[if lt IE 8]>
- <script src="../build.php?<?php echo(time()); ?>" type="text/javascript"></script>
+ <script src="../trunk/lib/IE8.js" type="text/javascript"></script>
  <script src="../ie7-css3-selectors.js" type="text/javascript"></script>
  <script src="../ie7-recalc.js" type="text/javascript"></script>
  <![endif]-->
