--- a/test/suite.html
+++ b/test/suite.html
@@ -2,7 +2,7 @@
 <html xmlns:html="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 <!-- compliance patch for microsoft browsers -->
-<!--[if lt IE 8]><script src="../build.php?<?php echo(time()); ?>" type="text/javascript"></script><![endif]-->
+<!--[if lt IE 8]><script src="../trunk/lib/IE8.js" type="text/javascript"></script><![endif]-->
 <link rel="stylesheet" href="../ie7-server.css" type="text/css"/>
 </head>
 
