--- a/test/test-fixed2.html
+++ b/test/test-fixed2.html
@@ -5,7 +5,7 @@
 <head>
  <title>IE7 {CSS2: auto}</title>
  <!-- compliance patch for microsoft browsers -->
- <!--[if lt IE 8]><script src="../build.php?<?php echo(time()); ?>" type="text/javascript"></script><![endif]-->
+ <!--[if lt IE 8]><script src="../trunk/lib/IE8.js" type="text/javascript"></script><![endif]-->
  <style type="text/css">
   #box1, #box2 {
    position: fixed;
