--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
-  <title>dean.edwards.name/something</title>
+  <title>IE7 Test Page</title>
   <link rel="stylesheet" type="text/css" href="http://deanedwards.googlecode.com/svn/trunk/css/screen.css" media="screen, projection"/>
   <link rel="stylesheet" type="text/css" href="http://deanedwards.googlecode.com/svn/trunk/css/print.css" media="print"/>
   <!--[if IE]><link rel="stylesheet" type="text/css" href="http://deanedwards.googlecode.com/svn/trunk/css/ie-layout.css"><![endif]-->
@@ -15,6 +15,7 @@
 <body>
 <div class="document">
 <div class="content">
+ <h1>IE7/IE8</h1>
  <p>The selectors and properties below should all work according to the
   <a href="http://www.w3.org/" title="World Wide Web Consortium">W3C</a> specifications.</p>
   
