--- a/test/margin-auto.html
+++ b/test/margin-auto.html
@@ -3,6 +3,9 @@
 <head>
  <title>IE7 {CSS2: auto}</title>
 
+ <!-- compliance patch for microsoft browsers -->
+ <!--[if lt IE 8]><script src="../trunk/lib/IE8.js" type="text/javascript"></script><![endif]-->
+
  <style type="text/css">
 
   div.container {background-color: silver;}
