--- a/test/doubled-margin.html
+++ b/test/doubled-margin.html
@@ -5,8 +5,8 @@
 
  <!-- compliance patch for microsoft browsers -->
  <!--[if lt IE 8]>
-  <script src="../trunk/lib/IE8.js" type="text/javascript"></script>
-  <script src="../ie7-squish.js" type="text/javascript"></script>
+ <script src="../trunk/lib/IE8.js" type="text/javascript"></script>
+ <script src="../trunk/lib/squish.js" type="text/javascript"></script>
  <![endif]-->
 
  <style type="text/css">
