--- a/test/peekaboo.html
+++ b/test/peekaboo.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
  <title>IE7 {CSS2: auto}</title>
 
  <!-- compliance patch for microsoft browsers -->
  <!--[if lt IE 8]>
-  <script src="../trunk/lib/IE8.js" type="text/javascript"></script>
-  <script src="../ie7-squish.js" type="text/javascript"></script>
+ <script src="../trunk/lib/IE8.js" type="text/javascript"></script>
+ <script src="../trunk/lib/squish.js" type="text/javascript"></script>
  <![endif]-->
 
  <style type="text/css">
 
-    div#floatholder a:hover{
+    div#floatholder a:hover {
         background: #f99;
         /* An a:hover mouseover change anywhere within #content
           will uncover missing content, but if 'color' and 'border' are toggled on hover
