--- a/test/unscrollable.html
+++ b/test/unscrollable.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
  <head>
  <title>IE7 {CSS2: auto}</title>
 
   <!-- compliance patch for microsoft browsers -->
   <!--[if lt IE 8]>
-   <script src="../trunk/lib/IE8.js" type="text/javascript"></script>
-   <script src="../ie7-squish.js" type="text/javascript"></script>
+  <script src="../trunk/lib/IE8.js" type="text/javascript"></script>
+  <script src="../trunk/lib/squish.js" type="text/javascript"></script>
   <![endif]-->
 
   <style type="text/css">
