--- a/test/index.html
+++ b/test/index.html
@@ -82,8 +82,8 @@
   </thead>
   <tbody>
    <tr><td>abbr</td><td>IE5/6 bugs fixed</td><td><a href="abbr.html">html</a></td></tr>
-   <tr><td>img</td><td><abbr title="Portable Network Graphics (format)">PNG (IE5.5+)</abbr> alpha
-    transparency</td><td><a href="png.html">html</a></td></tr>
+   <tr><td>img</td><td><abbr title="Portable Network Graphics (format)">PNG</abbr> alpha
+    transparency (IE5.5+)</td><td><a href="png.html">html</a></td></tr>
    <tr><td>label</td><td>bind to the first child control</td><td><a href="label.html">html</a></td></tr>
   </tbody>
  </table>
