--- a/test/recalc.html
+++ b/test/recalc.html
@@ -1,80 +1,22 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
  <title>IE7 {CSS2: auto}</title>
  <!-- compliance patch for microsoft browsers -->
  <!--[if lt IE 8]>
  <script src="../trunk/lib/IE8.js" type="text/javascript"></script>
- <script src="../ie7-recalc.js" type="text/javascript"></script>
+ <script src="../trunk/src/ie7-recalc.js" type="text/javascript"></script>
  <![endif]-->
-</head>
-<body>
- <script type="text/javascript" src="ie7-demo.js"></script>
-
- <h2>document.recalc()</h2>
- <p>Calling <code>document.recalc()</code> after you have made changes to the
-  <abbr title="Document Object Model">DOM</abbr> will refresh the IE7 style rules.
-  You must include the module <code>ie7-recalc.js</code> for this to work.</p>
-
- <hr />
-
- <!-- test CSS2/3 selectors -->
- <h3>Refresh <abbr title="Cascading Style Sheets">CSS</abbr> Rules</h3>
- <style type="text/css">
-  li:last-child {
-   background-color: yellow;
-  }
- </style>
- <script src="last-child.js" type="text/javascript"></script>
- <script type="text/javascript">
-  function addListItem() {
-   var parent = document.getElementById("list");
-   var child = document.createElement("li");
-   var text = document.createTextNode(item());
-   child.appendChild(text);
-   parent.appendChild(child);
-   if (document.recalc) document.recalc(); // IE7
-  };
- </script>
- <p>Add more list items and maintain the <code>last-child</code> selector.</p>
- <ul id="list">
-  <li>I am first.</li>
-  <li>I am second.</li>
-  <li>I am last.</li>
- </ul>
- <p><button onclick="addListItem()">Add List Item</button></p>
- <hr />
-
- <!-- test new HTML elements -->
- <h3>Refresh <abbr title="HyperText Markup Language">HTML</abbr> Elements</h3>
- <p>New <abbr>HTML</abbr> elements are fixed after they are created.</p>
- <style type="text/css">
+ 
+ <style type="text/css">  
   label:hover {
    background-color: yellow;
   }
- </style>
- <script type="text/javascript">
-  function addLabel() {
-   var parent = document.getElementById("labels");
-   var child = document.createElement("p");
-   var copy = parent.getElementsByTagName("p")[0];
-   child.innerHTML = copy.innerHTML;
-   parent.appendChild(child);
-   child.getElementsByTagName("input")[0].checked = false;
-   if (document.recalc) document.recalc(); // IE7
-  };
- </script>
- <div id="labels">
-  <p><label>You should be able to click this label to check/uncheck the box
-   <input type="checkbox" value="test"/></label></p>
- </div>
- <p><button onclick="addLabel()">Add Label</button></p>
- <hr />
-
- <!-- test calculated styles -->
- <h3>Recalculate Style Properties</h3>
- <p>Calculated properties (e.g. <code>width</code>) are maintained as new
-  content is created.</p>
- <style type="text/css">
+  
+  li:last-child {
+   background-color: yellow;
+  }
+  
   /* colourful boxes with tricky box-model calculations */
   div.box {border: black 10px solid; width: 2cm; height: 1cm;
    padding: 3em; margin: 1em; float: left;}
@@ -88,7 +30,29 @@
   div.box:nth-child(4n+2) {background-color: green;}
   div.box:nth-child(4n+3) {background-color: blue;}
  </style>
+ 
+ <script src="last-child.js" type="text/javascript"></script>
+ 
  <script type="text/javascript">
+  function addLabel() {
+   var parent = document.getElementById("labels");
+   var child = document.createElement("p");
+   var copy = parent.getElementsByTagName("p")[0];
+   child.innerHTML = copy.innerHTML;
+   parent.appendChild(child);
+   child.getElementsByTagName("input")[0].checked = false;
+   if (document.recalc) document.recalc(); // IE7
+  };
+  
+  function addListItem() {
+   var parent = document.getElementById("list");
+   var child = document.createElement("li");
+   var text = document.createTextNode(item());
+   child.appendChild(text);
+   parent.appendChild(child);
+   if (document.recalc) document.recalc(); // IE7
+  };
+  
   function addBox() {
    var parent = document.getElementById("boxes");
    var child = document.createElement("div");
@@ -97,10 +61,49 @@
    if (document.recalc) document.recalc(); // IE7
   };
  </script>
+</head>
+<body>
+ <script type="text/javascript" src="ie7-demo.js"></script>
+
+ <h2>document.recalc()</h2>
+ <p>Calling <code>document.recalc()</code> after you have made changes to the
+  <abbr title="Document Object Model">DOM</abbr> will refresh the IE7 style rules.
+  You must include the module <code>ie7-recalc.js</code> for this to work.</p>
+ 
+ <hr />
+
+ <!-- test new HTML elements -->
+ <h3>Refresh <abbr title="HyperText Markup Language">HTML</abbr> Elements</h3>
+ <p>New <abbr>HTML</abbr> elements are fixed after they are created.</p>
+ <div id="labels">
+  <p><label>You should be able to click this label to check/uncheck the box
+   <input type="checkbox" value="test"/></label></p>
+ </div>
+ <p><button onclick="addLabel()">Add Label</button></p>
+
+ <hr />
+
+ <!-- test CSS2/3 selectors -->
+ <h3>Refresh <abbr title="Cascading Style Sheets">CSS</abbr> Rules</h3>
+ <p>Add more list items and maintain the <code>last-child</code> selector.</p>
+ <ul id="list">
+  <li>I am first.</li>
+  <li>I am second.</li>
+  <li>I am last.</li>
+ </ul>
+ <p><button onclick="addListItem()">Add List Item</button></p>
+ 
+ <hr />
+
+ <!-- test calculated styles -->
+ <h3>Recalculate Style Properties</h3>
+ <p>Calculated properties (e.g. <code>width</code>) are maintained as new
+  content is created.</p>
  <div id="boxes">
   <div class="box"></div>
  </div>
  <p><button onclick="addBox()">Add Box</button></p>
+ 
  <hr />
 
  <p>&lt;&nbsp;<a href="index.html">back</a></p>
