beta 3. Added support for CSS property:inherit.

--- a/test/index.html
+++ b/test/index.html
@@ -70,6 +70,7 @@
    <tr><td>position</td><td>support fixed positioning</td><td><a href="fixed.html">html</a></td></tr>
    <tr><td>right</td><td><code>width</code> implied if <code>left</code> is
     supplied</td><td><a href="left-right.html">html</a></td></tr>
+   <tr><td><i>property</i>: inherit</td><td>Support for inherited property values</td><td><a href="inherit.html">html</a></td></tr>
   </tbody>
  </table>
  </div>
