Changed "::" to ":" for before/after selectors in tests.

--- a/test/after.html
+++ b/test/after.html
@@ -12,14 +12,14 @@
    background: skyblue;
   }
 
-  #inline::after {
+  #inline:after {
    display: inline;
    background-color: yellow;
    content: "World!";
    padding-left: .3em;
   }
 
-  #block::after {
+  #block:after {
    display: block;
    font-family: "Courier New";
    background-color: red;
