--- a/test/content2.html
+++ b/test/content2.html
@@ -15,19 +15,19 @@
    text-align: center;
   }
 
-  input.test::before, input.test::after {
+  input.test:before, input.test:after {
    display: block;
    height: 30px;
    background: yellow none no-repeat top right;
    text-align: left;
   }
 
-  input.test::before {
+  input.test:before {
    content: url(top-left.gif);
    background-image: url(top-right.gif);
   }
 
-  input.test::after {
+  input.test:after {
    content: url(bottom-left.gif);
    background-image: url(bottom-right.gif);
   }
