--- a/test/before.html
+++ b/test/before.html
@@ -14,17 +14,17 @@
    color: red;
   }
 
-  p.test::before {
+  p.test:before {
    background-color: yellow;
    content: "Hello";
    margin-right: .3em;
   }
 
-  #inline::before {
+  #inline:before {
    display: inline;
   }
 
-  #block::before {
+  #block:before {
    display: block;
   }
 
