--- a/test/content.html
+++ b/test/content.html
@@ -15,25 +15,19 @@
    text-align: center;
   }
 
-  p.test::before, p.test::after {
+  p.test:before, p.test:after {
    display: block;
    background: yellow none no-repeat top right;
    text-align: left;
-  }
-
-  p.test::before, p.test::after {
-   display: block;
    height: 30px;
-   background: yellow none no-repeat top right;
-   text-align: left;
   }
 
-  p.test::before {
+  p.test:before {
    content: url(top-left.gif);
    background-image: url(top-right.gif);
   }
 
-  p.test::after {
+  p.test:after {
    content: url(bottom-left.gif);
    background-image: url(bottom-right.gif);
   }
