Small tweak of a demo page.

--- a/test/content-attr.html
+++ b/test/content-attr.html
@@ -19,7 +19,7 @@
  <script src="ie7-demo.js"></script>
  <h2>content: attr()</h2>
 
- <p class="test">This is a link: <a href="http://www.technicalpursuit.com/">link</a></p>
+ <p class="test">This is a link: <a href="http://www.example.com/">link</a></p>
 
  <p>&lt;&nbsp;<a href="index.html">back</a></p>
 </body>
