--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,7 @@
   th.comments {width: 60%;}
   th.test {width: 6em;}
   th, td {border-right-width: 1px; border-right-style: solid; border-bottom-width: 1px; border-bottom-style: solid; border-color: #e6e9f9; padding: 3px;}
+  .content {padding-bottom: 40px;}
  </style>
 </head>
 
@@ -167,6 +168,18 @@
   </thead>
   <tbody>
    <tr><td>opacity</td><td>IE5.5+</td><td><a href="opacity.html">html</a></td></tr>
+  </tbody>
+ </table>
+
+ <h3><abbr title="HyperText Markup Language">HTML</abbr></h3>
+ <table>
+  <thead>
+   <tr><th>Element</th><th class="comments">Comments</th><th class="test">Test</th></tr>
+  </thead>
+  <tbody>
+   <tr><td>article, aside, audio, canvas, details, figcaption, figure, footer,
+    header, hgroup, mark, menu, meter, nav, output, progress, section, summary,
+    time, video</td><td>Only rendering support and basic style are provided</td><td><a href="html5.html">html</a></td></tr>
   </tbody>
  </table>
 
